2002-03-24  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b33

	* Added check_netpbm diagnostic script to the setup code

	* Tweaked config wizard to actually verify that the tmp directory is
	  writeable to resolve open_basedir issues.

2002-03-20  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b32

	* Fixed a minor but annoying issue where the config wizard spouts out
	  tons of "stat file does not exist" warnings when warnings are not
	  dialed down on the server.

	* Added support for PostNuke 0.7.1's new user API.

2002-03-19  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b31

	* Added the ability for you to grant users the "create sub album"
	  permission on a per-album basis.  This allows for much finer
	  granularity control over who can create albums, as well as providing
	  this necessary functionality when Gallery is embedded.

2002-03-18  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b30

	* Fixed a bug in printChildren() where we were not generating URLs
	  correctly causing the links not to work in all circumstances.

	* Fixed a bug in save_photos that would cause URL uploads to fail when
	  file_upload is disabled (thanks Sebastian Bergmann)

	* Fixed a bug in Album which would cause it to think that the mirror
	  was up to date in the case that the ISP has a bogus bumper page up to
	  handle 404 errors.

	* Added a donation plea to the bottom of the album and gallery pages,
	  only visible to the gallery admin.

2002-03-12  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b29

	* Fixed a typo in postnuke/UserDB that was causing errors with the new LoggedIn
	  functionality under PostNuke.

2002-03-11  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b28

	* Cleanup of view_comments page: (1) better differentiation of 
	  nested albums, (2) breadcrumb now in the context of the 
	  'view comments' mode, (3) added [return to album] link.

	* Fixed bug in the rendering of nested album thumbnails in the