@@ -5,6 +5,7 @@ contributed to the project in the form of new code, patches, bug fixes,
 or support.  Corrections, additions, deletions welcome.
 
 Adrian Chung		<adrian@enfusion-group.com>
+Anthony Moulen 		<ajmoulen@moulen.org>
 Bharat Mediratta	<bharat@menalto.com>
 Chris Smith		<chris@jacko.com>
 Dana Powers		<dana@slothlovechunk.org>
