@@ -1,3 +1,8 @@
+2002-03-28  John Kirkland  <jpk@bl.org>  1.2.6-cvs-b34
+
+	* Added patch by Anthony Moulen to support multi-line exif
+	  comments.
+
 2002-03-24  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b33
 
 	* Added check_netpbm diagnostic script to the setup code
